--- a/.settings
+++ b/.settings
@@ -2,11 +2,19 @@
 WavFile=[7]
 
 [Breakpoints]
-Count=1
-Breakpoint[1]="WavFileReader.23"
+Count=3
+Breakpoint[1]="WavFileReader.44"
+Breakpoint[2]="WavFileReader.56"
+Breakpoint[3]="WavFileReader.65"
 
 [DebugWindow]
 Count=0
+
+[DebugWindow/DataChunk]
+Geometry=[848,387,224,280]
+
+[DebugWindow/DataChunk.ByteArray]
+Geometry=[862,401,224,280]
 
 [DebugWindow/DataFile]
 Geometry=[848,387,224,280]
@@ -14,8 +22,11 @@ Geometry=[848,387,224,280]
 [DebugWindow/File(DataFile).Lines]
 Geometry=[862,401,224,280]
 
+[DebugWindow/FormatChunk]
+Geometry=[840,379,224,280]
+
 [DebugWindow/Model]
-Geometry=[410,375,487,280]
+Geometry=[1353,39,487,280]
 
 [DebugWindow/Model.Chunks]
 Geometry=[424,389,224,280]
@@ -36,9 +47,10 @@ Geometry=[424,389,487,280]
 Path="gb.wav.gambas"
 
 [OpenFile]
-Count=1
-Active=1
-File[1]=".src/Data/Reader/WavFileReader.class:13.20"
+Count=2
+Active=2
+File[1]=".src/UnitTest/Test_001_Read_Wav_File.class:0.11"
+File[2]=".src/Data/Reader/WavFileReader.class:46.44"
 
 [Watches]
 Count=0
