--- a/.settings
+++ b/.settings
@@ -2,10 +2,7 @@
 WavFile=[7]
 
 [Breakpoints]
-Count=3
-Breakpoint[1]="WavFileReader.44"
-Breakpoint[2]="WavFileReader.56"
-Breakpoint[3]="WavFileReader.65"
+Count=0
 
 [DebugWindow]
 Count=0
@@ -14,6 +11,9 @@ Count=0
 Geometry=[848,387,224,280]
 
 [DebugWindow/DataChunk.ByteArray]
+Geometry=[862,401,224,280]
+
+[DebugWindow/DataChunk.ShortArray]
 Geometry=[862,401,224,280]
 
 [DebugWindow/DataFile]
@@ -47,10 +47,9 @@ Geometry=[424,389,487,280]
 Path="gb.wav.gambas"
 
 [OpenFile]
-Count=2
-Active=2
-File[1]=".src/UnitTest/Test_001_Read_Wav_File.class:0.11"
-File[2]=".src/Data/Reader/WavFileReader.class:46.44"
+Count=1
+Active=1
+File[1]=".src/Model/WavFile.class:0.9"
 
 [Watches]
 Count=0
