Successful Merge Three Piano Chrods into One .Wav File

--- a/.settings
+++ b/.settings
@@ -7,6 +7,21 @@ Count=0
 [DebugWindow]
 Count=0
 
+[DebugWindow/Base]
+Geometry=[-8,5,224,280]
+
+[DebugWindow/Base.DataChunks]
+Geometry=[63,222,224,280]
+
+[DebugWindow/Base.DataChunks[0]]
+Geometry=[20,33,224,280]
+
+[DebugWindow/Base.DataChunks[1]]
+Geometry=[28,41,224,280]
+
+[DebugWindow/Base.DataChunks[2]]
+Geometry=[28,41,224,280]
+
 [DebugWindow/DataChunk]
 Geometry=[848,387,224,280]
 
@@ -21,6 +36,36 @@ Geometry=[848,387,224,280]
 
 [DebugWindow/File(DataFile).Lines]
 Geometry=[862,401,224,280]
+
+[DebugWindow/Files]
+Geometry=[188,386,224,280]
+
+[DebugWindow/Files[0]]
+Geometry=[202,400,357,280]
+
+[DebugWindow/Files[0].DataChunks]
+Geometry=[265,501,357,280]
+
+[DebugWindow/Files[1]]
+Geometry=[202,400,451,280]
+
+[DebugWindow/Files[1].DataChunks]
+Geometry=[266,494,451,280]
+
+[DebugWindow/Files[2]]
+Geometry=[226,432,398,280]
+
+[DebugWindow/Files[2].DataChunks]
+Geometry=[240,446,398,280]
+
+[DebugWindow/Files[2].DataChunks[0]]
+Geometry=[283,490,398,280]
+
+[DebugWindow/Files[2].FormatChunks]
+Geometry=[240,446,398,280]
+
+[DebugWindow/Files[2].FormatChunks[0]]
+Geometry=[254,460,398,280]
 
 [DebugWindow/FormatChunk]
 Geometry=[840,379,224,280]
@@ -42,6 +87,63 @@ Geometry=[424,389,487,280]
 
 [DebugWindow/Model.FormatChunks]
 Geometry=[424,389,487,280]
+
+[DebugWindow/Wave1]
+Geometry=[-8,-8,224,280]
+
+[DebugWindow/Wave1.DataChunks]
+Geometry=[6,6,224,280]
+
+[DebugWindow/Wave1.DataChunks[0]]
+Geometry=[20,20,224,280]
+
+[DebugWindow/Wave1.DataChunks[0].ShortArray]
+Geometry=[34,34,224,280]
+
+[DebugWindow/Wave2]
+Geometry=[223,210,224,280]
+
+[DebugWindow/Wave2.DataChunks]
+Geometry=[229,216,224,280]
+
+[DebugWindow/Wave2.DataChunks[0]]
+Geometry=[243,230,224,280]
+
+[DebugWindow/Wave2.DataChunks[0].ShortArray]
+Geometry=[257,244,224,280]
+
+[DebugWindow/Wave3]
+Geometry=[481,407,224,280]
+
+[DebugWindow/Wave3.DataChunks]
+Geometry=[495,421,224,280]
+
+[DebugWindow/Wave3.DataChunks[0]]
+Geometry=[509,435,224,280]
+
+[DebugWindow/Wave3.DataChunks[0].ShortArray]
+Geometry=[523,449,224,280]
+
+[DebugWindow/Wave4]
+Geometry=[764,612,419,280]
+
+[DebugWindow/Wave4.DataChunks]
+Geometry=[778,626,419,280]
+
+[DebugWindow/Wave4.DataChunks[0]]
+Geometry=[792,640,419,280]
+
+[DebugWindow/Wave4.DataChunks[0].ShortArray]
+Geometry=[806,654,419,280]
+
+[DebugWindow/Wave4.FactChunks]
+Geometry=[4,6,419,280]
+
+[DebugWindow/Wave4.FormatChunks]
+Geometry=[4,6,419,280]
+
+[DebugWindow/Wave4.FormatChunks[0]]
+Geometry=[18,20,419,280]
 
 [Executable]
 Path="gb.wav.gambas"
